crates/biome_cli/tests/snapshots/main_cases_editorconfig/should_use_editorconfig_check.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --use-editorconfig=true test.js
```

## `.editorconfig`

```editorconfig

[*]
indent_style = space
indent_size = 8

```

## `test.js`

```js
function setName(name) {
 currentName = name;
}

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:1:10 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This function setName is unused.
  
  > 1 │ function setName(name) {
      │          ^^^^^^^
    2 │  currentName = name;
    3 │ }
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend setName with an underscore.
  
    1   │ - function·setName(name)·{
      1 │ + function·_setName(name)·{
    2 2 │    currentName = name;
    3 3 │   }
  

```

```block
test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1 1 │   function setName(name) {
    2   │ - ·currentName·=·name;
      2 │ + ········currentName·=·name;
    3 3 │   }
    4 4 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
Found 1 warning.
```
