crates/biome_cli/tests/snapshots/main_cases_editorconfig/should_use_editorconfig_enabled_from_biome_conf.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write test.js
```

## `biome.json`

```json
{
  "formatter": {
    "useEditorconfig": true
  }
}
```

## `.editorconfig`

```editorconfig

[*]
indent_style = space
indent_size = 8

```

## `test.js`

```js
function setName(name) {
        currentName = name;
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
